--- a/src/window/login_window.ui
+++ b/src/window/login_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>300</height>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -111,6 +111,107 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelRegisterHeader">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>230</y>
+     <width>150</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Registracija</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelRegisterUsername">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>260</y>
+     <width>150</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Naujas vartotojas:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditRegisterUserName">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>280</y>
+     <width>150</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelRegisterPassword">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>320</y>
+     <width>150</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Naujas slaptažodis:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditRegisterPassword">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>340</y>
+     <width>150</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelConfirmPassword">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>380</y>
+     <width>150</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pakartokite slaptažodį:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditConfirmPassword">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>400</y>
+     <width>150</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonRegister">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>430</y>
+     <width>101</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Registruotis</string>
    </property>
   </widget>
  </widget>
