--- a/src/window/login_window.ui
+++ b/src/window/login_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>460</height>
+    <height>260</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>75</x>
-     <y>50</y>
+     <y>30</y>
      <width>150</width>
      <height>16</height>
     </rect>
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>75</x>
-     <y>110</y>
+     <y>90</y>
      <width>150</width>
      <height>16</height>
     </rect>
@@ -52,7 +52,7 @@
    <property name="geometry">
     <rect>
      <x>75</x>
-     <y>70</y>
+     <y>50</y>
      <width>150</width>
      <height>21</height>
     </rect>
@@ -62,7 +62,7 @@
    <property name="geometry">
     <rect>
      <x>75</x>
-     <y>130</y>
+     <y>110</y>
      <width>150</width>
      <height>21</height>
     </rect>
@@ -75,7 +75,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>200</y>
+     <y>170</y>
      <width>80</width>
      <height>27</height>
     </rect>
@@ -88,7 +88,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>200</y>
+     <y>170</y>
      <width>80</width>
      <height>27</height>
     </rect>
@@ -100,113 +100,25 @@
   <widget class="QLabel" name="labelError">
    <property name="geometry">
     <rect>
-     <x>75</x>
-     <y>170</y>
-     <width>150</width>
+     <x>40</x>
+     <y>140</y>
+     <width>221</width>
      <height>16</height>
     </rect>
    </property>
-   <property name="locale">
-    <locale language="Lithuanian" country="Lithuania"/>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="labelRegisterHeader">
+  <widget class="QPushButton" name="buttonOpenRegister">
    <property name="geometry">
     <rect>
-     <x>75</x>
-     <y>230</y>
-     <width>150</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Registracija</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelRegisterUsername">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>260</y>
-     <width>150</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Naujas vartotojas:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditRegisterUserName">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>280</y>
-     <width>150</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelRegisterPassword">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>320</y>
-     <width>150</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Naujas slaptažodis:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditRegisterPassword">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>340</y>
-     <width>150</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelConfirmPassword">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>380</y>
-     <width>150</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Pakartokite slaptažodį:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditConfirmPassword">
-   <property name="geometry">
-    <rect>
-     <x>75</x>
-     <y>400</y>
-     <width>150</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="buttonRegister">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>430</y>
-     <width>101</width>
+     <x>60</x>
+     <y>210</y>
+     <width>181</width>
      <height>27</height>
     </rect>
    </property>
